examples/test/testpolicy16890.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16890
  namespace: namespace165
spec:
  podSelector:
    matchLabels:
      key13: value47
      key25: value1
      key29: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value25
      podSelector:
        matchLabels:
          key42: value3
          key20: value48
          key8: value7
